--- a/server/package.json
+++ b/server/package.json
@@ -4,6 +4,7 @@
   "description": "",
   "main": "index.js",
   "scripts": {
+    "serve":"node index",
     "dev": "nodemon index"
   },
   "keywords": [],
