--- a/client/package.json
+++ b/client/package.json
@@ -15,6 +15,7 @@
     "@testing-library/user-event": "^13.5.0",
     "apollo-link-context": "^1.0.20",
     "graphql": "^16.3.0",
+    "graphql-request": "^4.0.0",
     "jwt-decode": "^3.1.2",
     "moment": "^2.29.1",
     "react": "^17.0.2",
@@ -22,6 +23,7 @@
     "react-hook-form": "^7.27.1",
     "react-router-dom": "^6.2.1",
     "react-scripts": "5.0.0",
+    "swr": "^1.2.2",
     "web-vitals": "^2.1.4",
     "yup": "^0.32.11"
   },
