--- a/server/package.json
+++ b/server/package.json
@@ -5,7 +5,8 @@
   "main": "index.js",
   "scripts": {
     "serve": "node index",
-    "dev": "nodemon index"
+    "dev": "nodemon index",
+    "start":"node start"
   },
   "keywords": [],
   "author": "",
